@startuml

title __ACTIVITIES's Class Diagram__\n

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.activities {
      class LoginActivity {
          - googleButton : SignInButton
          - email_edit_text : EditText
          - password_edit_text : EditText
          - confirm_email_edit_text : EditText
          - confirm_password_edit_text : EditText
          - firstname_edit_text : EditText
          - lastname_edit_text : EditText
          - btnLogin : Button
          - txtRegister : TextView
          - txtLogin : TextView
          - showPassword : CheckBox
          - lLayoutName : LinearLayout
          # onCreate()
          # onStart()
          + register()
          + login()
          + initializeViews()
          + setOnClickListeners()
          + createRegisterForm()
          + onClick()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.activities {
      class MainActivity {
          {static} - TAG : String
          {static} - FINE_LOCATION : String
          {static} - COARSE_LOCATION : String
          {static} - LOCATION_PERMISSION_REQUEST_CODE : int
          {static} + mLocationPermissionsGranted : Boolean
          {static} + mainViewModel : MainViewModel
          {static} + googleApiClient : GoogleApiClient
          # onCreate()
          # onStart()
          - initializeViews()
          - createObservers()
          - removeObservers()
          + onBackPressed()
          + onNavigationItemSelected()
          - getLocationPerms()
          + onRequestPermissionsResult()
          + onConnectionFailed()
          + onPostSaved()
          + onUserSave()
          + onUserDelete()
          + onCurrentUserChanged()
          + onPostsChanged()
          + onUsersChanged()
          + onMapPostUpdated()
      }
    }
  }
  

  LoginActivity -up-|> OnClickListener
  LoginActivity -up-|> AppCompatActivity
  LoginActivity o-- LoginViewModel : loginViewModel
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> OnConnectionFailedListener
  MainActivity -up-|> EditPostFragmentListener
  MainActivity -up-|> MapListener
  MainActivity -up-|> UsersListener
  MainActivity -up-|> UserFragmentListener
  MainActivity -up-|> UserListener
  MainActivity -up-|> PostsListener
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- CurrentUser : currentUser
  MainActivity o-- PostHashMap : posts
  MainActivity o-- UsersHashMap : users
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
